Fix route destination alignment

--- a/src/components/routeDiagram/destinations.css
+++ b/src/components/routeDiagram/destinations.css
@@ -14,7 +14,7 @@
 }
 
 .destination *:first-child {
-    width: calc(80px + leftWidth);
+    width: calc(72px + leftWidth);
     margin-left: -80px;
     font-size: 28px;
     text-align: right;
